# solana-bot-terbaek

./: .coveragerc  .gitignore  .pre-commit-config.yaml  BOT_RUNNING_STATUS.md  CODEBASE_INDEX.md  E2E_REFACTORING_REPORT.md  E2E_STATUS.md  E2E_TESTING_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  LOGGING_GUIDE.md  QUICKSTART.md  README.md  SAFE_BOT_README.md  SOLANA_BOT_README.md  bot_config.json  coverage.xml  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  requirements_safe.txt  safe_bot_cli.py  setup.cfg  solana_bot_cli.py  test_phase1_enhancements.py  test_phase2_enhancements.py  test_token_age_validation.py  test_volume_validation.py  verify_real_analysis.py
.github/workflows/: main.yml
config/: bot_config.json  test_config.json
docs/: IMPLEMENTATION_PLAN.md  README.md
py_modules/es_metrics/: conf.py
py_modules/usbrh/: space.py
safe_bot/: monitor.py  price_tracker.py  security.py  transaction.py  triggers.py  wallet.py
safe_bot/raydium/: constants.py  layouts.py  swap.py
scripts/: test_monitor.py
solana_bot/: __init__.py  config.py  jito_client.py  monitor.py  pool_parser.py  rugcheck_client.py  security.py  triggers.py  wallet.py
solana_bot/raydium/: __init__.py  swap.py
src/solana_bot/: birdeye_client.py  config.py  dex_screener_client.py  monitor.py  price_tracker.py  security.py  solana_bot_cli.py  volume_validator.py  wallet.py
src/utils/: contract.py
tests/: __init__.py  conftest.py  test_config.py  test_monitor.py  test_price_tracker.py  test_raydium_swap.py  test_security.py  test_transaction.py  test_triggers.py  test_wallet.py
tests/e2e/: __init__.py  test_configuration_validation.py  test_error_handling.py  test_performance.py  test_phase1_integration.py  test_phase2_integration.py  test_pool_detection.py  test_system_integration.py  test_system_validation.py  test_token_analysis.py  test_trade_execution.py  test_websocket.py
tests/integration/: test_component_integration.py  test_simplified_integration.py
tests/unit/: test_advanced_holder_analysis.py  test_basic_config.py  test_birdeye_price_features.py  test_bulk_api_operations.py  test_config.py  test_monitor.py  (+5 more)
(+2 files in other folders)
